--- a/ui/org.eclipse.pde.ui.tests/tests/projects/classpathupdater/.classpath
+++ b/ui/org.eclipse.pde.ui.tests/tests/projects/classpathupdater/.classpath
@@ -6,10 +6,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="library.jar">
+	<classpathentry exported="true" kind="lib" path="library.jar">
 		<attributes>
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="A.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
