--- a/ui/org.eclipse.pde.ui.tests/tests/projects/classpathupdater/build.properties
+++ b/ui/org.eclipse.pde.ui.tests/tests/projects/classpathupdater/build.properties
@@ -14,4 +14,5 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               library.jar
+               library.jar, \
+               A.jar
